[package]
name = "postres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.12", features = ["derive"] }
derive_builder = "0.11.2"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
postman_collection = "0.2.0"
regex = "1.6.0"
string-builder = "0.2.0"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
url = "2.2.2"

[dev-dependencies]
indoc = "1.0"
